--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
+    <nav class="MenuHeader">
+      <div class="container__bars">
+        <i class="fas fa-bars"></i>
+      </div>
+        <ul class="MainMenu">
+            <li><a href="#">lien1</a></li>
+            <li><a href="#">lien2 <i class="fas fa-sort-down"></i></a>
+              <ul class="MainMenu_2">
+                  <li><a href="#">lien1</a></li>
+                  <li><a href="#">lien2</a></li>
+              </ul>
+            </li>
+            <li><a href="#">lien3 <i class="fas fa-sort-down"></i></a>
+              <ul class="MainMenu_2">
+                  <li><a href="#">lien1</a></li>
+                  <li><a href="#">lien2</a></li>
+              </ul>
+            </li>
+            <li><a href="#">lien4</a></li>
+            <li><a href="#">lien5</a></li>
+        </ul>
+    </nav>
 
-    <script src="main.js"></script>
+    <script src="static/js/main.js" type="text/javascript"></script>
 </body>
 </html>
